k8s/pt-dev-env/ingress/loki-greafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-grafana-pttech-ingress
  namespace: loki-stack
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - loki-grafana.pttech.cc
    secretName: loki-grafana-pttech-tls
  rules:
  - host: loki-grafana.pttech.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-grafana
            port:
              number: 80
