k8s/pt-dev-env/ingress/pt-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-pttech-ingress
  namespace: pt
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - admin.pttech.cc
    secretName: admin-pttech-tls
  rules:
  - host: admin.pttech.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pt-admin-ui
            port:
              number: 80
