k8s/pt-dev-env/ingress/pt-client-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-gateway-pttech-ingress
  namespace: pt
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - client-gateway.pttech.cc
    secretName: client-gateway-pttech-tls
  rules:
  - host: client-gateway.pttech.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pt-component-gateway-client-svc
            port:
              number: 8888
